# llm-infer-serverless

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  download_model.py  handler.py  pyproject.toml  requirements.txt
.github/workflows/: docker-ghcr.yml
data/: clean_dataset.py  docker-compose.yml  export_dataset.py  pyproject.toml  restore.sh
docs/: finetune-process.md  qlora-cheat-sheet.md
scripts/: .env.example  chat_runpod.py  download_model.py  merge_lora.py  push_to_hf.py  quantize_awq.py  serve_vllm_lora.py  serve_vllm_quantized.py  train.py  upload_dataset.py
